--- a/render.yaml
+++ b/render.yaml
@@ -4,14 +4,8 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./Dockerfile
+    autoDeploy: true
+    healthCheckPath: /
     envVars:
-      - key: DB_HOST
-        value: mainline.proxy.rlwy.net
-      - key: DB_USER
-        value: root
-      - key: DB_PASS
-        value: bsMapmRGNiMXLsNGqQyxrlAmFSKPDIOl
-      - key: DB_NAME
-        value: railway
-      - key: DB_PORT
-        value: "41762"
+      - key: PYTHONUNBUFFERED
+        value: "1"
