--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,16 @@
+# services:
+#   - type: web
+#     name: trendhive
+#     env: docker
+#     plan: free
+#     dockerfilePath: ./Dockerfile
+#     autoDeploy: true
+#     healthCheckPath: /
+#     envVars:
+#       - key: PYTHONUNBUFFERED
+#         value: "1"
+
+
 services:
   - type: web
     name: trendhive
