--- a/requirements.txt
+++ b/requirements.txt
@@ -10,16 +10,28 @@
 
 
 
-Flask
+# Flask
+# mysql-connector-python
+# pandas
+# plotly
+# webdriver-manager
+# selenium
+# gunicorn
+# beautifulsoup4
+# requests
+# python-dotenv
+
+# # Firefox + Geckodriver dependencies
+# pytest
+
+
+
+flask
 mysql-connector-python
+selenium
+webdriver-manager
 pandas
 plotly
-webdriver-manager
-selenium
 gunicorn
-beautifulsoup4
-requests
+gevent
 python-dotenv
-
-# Firefox + Geckodriver dependencies
-pytest
